syntax = "proto3";
package comment;
option go_package = "sparks/grpc_gen/comment;proto";
import "user.proto";

message Comment {
  int64 id = 1;                  // 视频评论id
  user.User user = 2;            // 评论用户信息
  string content = 3;            // 评论内容
  string create_date = 4;       // 评论发布日期，格式 mm-dd
}

message CommentActionRequest {
  int64 user_id = 1;              // 用户鉴权token
  int64 video_id = 2;             // 视频id
  int32 action_type = 3;          // 1-发布评论，2-删除评论
  optional string comment_text = 4;        // 用户填写的评论内容，在action_type=1的时候使用
  optional int64 comment_id = 5;           // 要删除的评论id，在action_type=2的时候使用
}

message CommentActionResponse {
  int32 status_code = 1;
  string status_msg = 2;
}

message CommentListRequest {
  int64 user_id = 1;             // 用户id
  int64 video_id = 2;            // 视频id
}

message CommentListResponse {
  int32 status_code = 1;          // 状态码，200-成功，其他值-失败
  string status_msg = 2;          // 返回状态描述
  repeated Comment comment_list = 3;  // 评论列表
}

message CommentCountRequest {
  int64 video_id = 1;            // 视频id
}

message CommentCountResponse {
  int32 status_code = 1;          // 状态码，200-成功，其他值-失败
  string status_msg = 2;          // 返回状态描述
  int32 count = 3;  // 评论数
}

service CommentService {
  rpc CommentAction (CommentActionRequest) returns (CommentActionResponse);
  rpc GetCommentList (CommentListRequest) returns (CommentListResponse);
  rpc GetCommentCount (CommentCountRequest) returns (CommentCountResponse);  // 根据video_id获取评论数
}
